fix(css): fix layout issues to make site responsive

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ a {
 
 a:hover {
   color: #4cb4e7;
+  text-decoration: underline;
 }
 
 li {
@@ -84,8 +85,7 @@ ul {
   flex-direction: column;
 }
 
-.description button,
-.cta-container button {
+.description button {
   width: 200px;
   background-color: #235ba8;
   color: #fff;
@@ -116,18 +116,29 @@ ul {
 }
 
 .body-2-wrapper {
+  padding: 50px;
+}
+
+.body-2-content {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 50px 0;
   max-width: 1000px;
   margin: 0 auto;
 }
 
 .carousel {
   display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  text-align: center;
+  font-size: 15px;
   padding-top: 20px;
   gap: 25px;
+}
+
+.carousel div {
+  width: 200px;
 }
 
 .picture {
@@ -145,11 +156,6 @@ ul {
   box-shadow: 5px 5px 10px #1e2779;
 }
 
-.picture .text {
-  text-align: center;
-  width: 150px;
-}
-
 .quote-wrapper {
   background-color: #4cb4e7;
   padding: 50px 0;
@@ -165,7 +171,6 @@ ul {
 }
 
 .quote-text {
-  text-align: justify;
   font-size: 36px;
 }
 
@@ -179,17 +184,31 @@ ul {
   display: flex;
   max-width: 1000px;
   justify-content: space-between;
+  align-items: center;
   margin: 50px auto;
   padding: 50px;
   background-color: #235ba8;
   border-radius: 10px;
   color: #fff;
+  flex-wrap: wrap;
 }
 
 .cta-text-wrapper {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  height: 100%;
   gap: 10px;
+}
+
+.cta-container button {
+  width: 200px;
+  background-color: #235ba8;
+  color: #fff;
+  font-size: 16px;
+  border: 2px #fff solid;
+  border-radius: 5px;
+  padding: 6px 12px;
 }
 
 .cta-head {
